--- a/ui/style/Login.css
+++ b/ui/style/Login.css
@@ -81,7 +81,7 @@ form .txt_field {
 .pass:hover {
   text-decoration: underline;
 }
-input[type="submit"] {
+.btnInput {
   width: 100%;
   height: 50px;
   border: 1px solid;
@@ -93,7 +93,7 @@ input[type="submit"] {
   cursor: pointer;
   outline: none;
 }
-input[type="submit"]:hover {
+.btnInput:hover {
   border-color: #2691d9;
   transition: 0.5s;
 }
@@ -109,4 +109,8 @@ input[type="submit"]:hover {
 }
 .signup_link a:hover {
   text-decoration: underline;
+}
+.error_text {
+  font-weight: bold;
+  color: #ff0060;
 }
